--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700;800&display=swap');
+
 :root {
   --bcg-primary: #f5f6fb;
   --bcg-second: #ffffff;
