--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@
   --text-secondary: #555555;
   --text-light: #ffffff;
   --text-footer: rgba(255, 255, 255, 0.4);
+  --text-input-placeholder: #bbbbbb;
   --color-active-menu: #ff6b09;
   --color-border: #e2e3e5;
   --color-border-bottom: 1px solid #00122f; /*after title on page*/
