--- a/src/index.scss
+++ b/src/index.scss
@@ -25,10 +25,10 @@
   --main-font-famali: "Montserrat", sans-serif;
 }
 
-body * {
+* {
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
 }
 
 body {
@@ -60,6 +60,7 @@ ul {
 }
 
 .container {
+  padding: 0 10px;
   margin: 0 auto;
   width: 100%;
 }
