add_loader_corect_public_&_private_rout_add_api

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700;800&display=swap");
 
 :root {
-  --bcg-primary: #e5e5e5;
+  --bcg-primary: #f5f6fb;
   --bcg-second: #ffffff;
   --bcg-footer: #02172a;
   --bcg-btn-dark: #02172a;
@@ -17,7 +17,7 @@
   --text-input-placeholder: #bbbbbb;
   --color-active-menu: #ff6b09;
   --color-border: #e2e3e5;
-  --color-border-bottom: 1px solid #00122f; /*after title on page*/
+  --color-border-bottom: 1px solid #e5e5e5; /*after title on page*/
   --color-shodow: rgba(2, 23, 42, 0.1);
   --color-input: #ced2d1;
   --diagram-positive: #ff6b01;
