--- a/src/pages/AuthPage/authPage.module.scss
+++ b/src/pages/AuthPage/authPage.module.scss
@@ -1,62 +1,64 @@
 .text {
-    margin-top: 40px;
-    margin-bottom: 8px;
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
+  padding-top: 40px;
+  padding-bottom: 8px;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 @media screen and (min-width: 768px) {
-    .text{
-        font-size: 30px;
-        line-height: 1.23;
-    }
+  .text {
+    padding-top: 82px;
+    font-size: 30px;
+    line-height: 1.23;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .text {
-        font-size: 34px;
-    }
+  .text {
+    padding-top: 170px;
+    font-size: 34px;
+  }
 }
 
 .desc_text {
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.66;
-    letter-spacing: 0.02em;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.66;
+  letter-spacing: 0.02em;
 }
 
 @media screen and (min-width: 768px) {
-    .desc_text {
-        font-size: 16px;
-        line-height: 2.25;
-    }
+  .desc_text {
+    font-size: 16px;
+    line-height: 2.25;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .desc_text {
-        font-size: 18px;
-        line-height: 2;
-    }
+  .desc_text {
+    font-size: 18px;
+    line-height: 2;
+  }
 }
 
 .text_wrap {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .auth_wrap {
-    width: 280px;
+  width: 280px;
 }
 
 @media screen and (min-width: 768px) {
-    .auth_wrap {
-        width: 535px;
-    }
+  .auth_wrap {
+    width: 535px;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .auth_wrap {
-        width: 420px;
-    }
+  .auth_wrap {
+    width: 420px;
+  }
 }
