--- a/src/shared/components/Button/button.module.scss
+++ b/src/shared/components/Button/button.module.scss
@@ -54,6 +54,9 @@
         height: 60px;
         background-color: var(--bcg-btn-active);
         color: var(--text-light);
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 0.8;
         padding: 23px 77px;
 }
 }
