--- a/src/modules/Header/MobileMenu/mobile-menu.module.scss
+++ b/src/modules/Header/MobileMenu/mobile-menu.module.scss
@@ -1,9 +1,61 @@
-.icon {
-    display: inline-block;
-    width: 129px;
-    height: 28px;
-    stroke-width: 0;
-    stroke: var(--bcg-btn-active)r;
-    fill: var(--bcg-btn-active);
-    mask-image: var(--bcg-btn-active);
+.overlay {
+    position: fixed;
+    top: 68px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    -webkit-box-align: center;
+    -webkit-box-pack: center;
+    z-index: 1;
+
+}
+
+@media screen and (min-width: 768px) {
+    .overlay {
+        display: none;
+    }
+}
+
+.mobile_container {
+    position: relative;
+    top: 1px;
+    width: 100%;
+    height: 100vh;
+    background-color: #F5F6FB;
+    // background-color: transparent;
+    z-index: 1;
+}
+
+@media screen and (min-width: 768px) {
+    .mobile_container {
+        display: none;
+    }
+}
+
+.mobile_menu {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+    .mobile_menu {
+        display: none;
+    }
+}
+
+.item {
+    padding: 26px 0;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    border-bottom: 1px solid var(--color-border);
 }
