--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700;800&display=swap");
 
+// html {
+//   height: 100%;
+// }
+// body {
+//   display: flex;
+//   flex-direction: column;
+//   height: 100%;
+// }
+
+// header {
+//   /* 0 flex-grow, 0 flex-shrink, auto flex-basis */
+//   flex: 0 0 auto;
+// }
+// main {
+//   /* 1 flex-grow, 0 flex-shrink, auto flex-basis */
+//   flex: 1 0 auto;
+// }
+// footer {
+//   /* 0 flex-grow, 0 flex-shrink, auto flex-basis */
+//   flex: 0 0 auto;
+// }
+
 :root {
   --bcg-primary: #f5f6fb;
   --bcg-second: #ffffff;
