--- a/src/modules/Header/UserMenu/user-menu.module.scss
+++ b/src/modules/Header/UserMenu/user-menu.module.scss
@@ -1,7 +1,7 @@
-// .container {
-//     // padding: 22px 23px;
-//     border-left: 1px solid var(--color-border);
-// }
+.container {
+    margin-left: 20px;
+    // border-left: 1px solid var(--color-border);
+}
 
 .icon_menu {
     width: 20px;
