--- a/src/modules/Header/MobileMenu/mobile-menu.module.scss
+++ b/src/modules/Header/MobileMenu/mobile-menu.module.scss
@@ -7,12 +7,27 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    
     -webkit-box-align: center;
     -webkit-box-pack: center;
     z-index: 1;
+    // opacity: 1;
+    // transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    // transition: 700ms ease-in;
 
+
+    
 }
+
+// .open {
+//     composes: overlay;
+//     // opacity: 0;
+//     // transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+//     transition: 700ms ease-in;
+// top: 100%;
+//     // right: 100%;
+//     // left: 100%;
+
+// }
 
 @media screen and (min-width: 768px) {
     .overlay {
@@ -28,6 +43,7 @@
     background-color: #F5F6FB;
     // background-color: transparent;
     z-index: 1;
+
 }
 
 @media screen and (min-width: 768px) {
@@ -41,6 +57,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+        opacity: 1;
+            transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
@@ -64,6 +82,7 @@
     font-size: 14px;
     line-height: 0.86;
     color: var(--color-text);
+    transition: 1000ms;
 }
 
 .isActive {
