--- a/src/modules/Header/header.module.scss
+++ b/src/modules/Header/header.module.scss
@@ -53,7 +53,7 @@
 //     z-index: 1001;
 // }
 
-.container {
+.container_header {
     display: flex;
     align-items: center;
     justify-content: space-between;
