--- a/src/modules/TestModule/Questions/questions.module.scss
+++ b/src/modules/TestModule/Questions/questions.module.scss
@@ -51,4 +51,42 @@
   .upper_wrap {
     display: flex;
   }
-  
+  .list{
+    display: flex;
+    margin: 10px auto;
+    justify-content: center;
+    gap: 20px;
+    
+  }
+  .item{
+    background-color: rgba(147, 141, 141, 0.634);
+    
+    cursor: pointer;
+    border-radius: 5px;
+    color: white;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &:hover{
+      background-color: rgba(255, 107, 1, 0.5);
+    }
+    
+  }
+  .complete{
+    background-color: var(--color-active-menu);
+    cursor: pointer;
+    border-radius: 5px;
+    color: white;
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    &:hover{
+      background-color: rgba(255, 107, 1, 0.5);
+    }
+   
+  }
