--- a/src/modules/Header/UserInfo/user-info.module.scss
+++ b/src/modules/Header/UserInfo/user-info.module.scss
@@ -40,6 +40,15 @@
     }
 // }
 
+.mobile_line {
+    display: block;
+    width: 1px;
+    height: 68px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: var(--color-border);
+}
+
 // .line {
 //     font-size: 14px;
 //     line-height: 16px;
