--- a/src/modules/Header/header.module.scss
+++ b/src/modules/Header/header.module.scss
@@ -3,13 +3,13 @@
     position: sticky;
     width: 100vw;
     top: 0;
+    text-align: end;
     // display: flex;
     // align-items: center;
     // justify-content: space-between;
     // border: 10px;
     // padding: 17.5px 0;
     // padding: 0 20px;
-    padding: 0 20px;
     background-color: #F5F6FB;
     border-bottom: 1px solid var(--color-border);
     z-index: 1000;
@@ -27,11 +27,22 @@
     top: 0;
     // padding-top: 20px;
     // padding-bottom: 20px;
-    padding: 20px;
 
     background-color: #F5F6FB;
     border-bottom: 1px solid var(--color-border);
-    z-index: 100000;
+    z-index: 1000;
+}
+
+@media screen and (min-width: 1280px) {
+    .isActive {
+        position: relative;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .isActive {
+        padding: 20px 0;
+    }
 }
 
 // var(--bcg-btn-active)
@@ -56,7 +67,7 @@
 .container_header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    // justify-content: space-between;
         
     // display: block;
     // top: 100px;
@@ -86,7 +97,7 @@
     display: flex;
     align-items: center;
     
-    justify-content: center;
+    // justify-content: center;
     margin-left: auto;
 }
 
@@ -111,12 +122,10 @@
     .icon_logout {
         display: none;
     }
-
-
 }
 
-        .wrapper_mobile {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
+.wrapper_mobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
