--- a/src/modules/TestModule/Questions/questions.module.scss
+++ b/src/modules/TestModule/Questions/questions.module.scss
@@ -90,3 +90,34 @@
     }
    
   }
+
+
+.wrapper {
+    width: 280px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+    .wrapper {
+        width: 704px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0 auto;
+        padding-bottom: 107px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .wrapper {
+        width: 821px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 0 auto;
+    }
+}
