--- a/src/shared/components/TestingButtons/testing-buttons.module.scss
+++ b/src/shared/components/TestingButtons/testing-buttons.module.scss
@@ -1,30 +1,30 @@
-.wrapper {
-    width: 280px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-}
+// .wrapper {
+//     width: 280px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+//     margin: 0 auto;
+// }
 
-@media screen and (min-width: 768px) {
-    .wrapper {
-        width: 704px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin: 0 auto;
-    }
-}
+// @media screen and (min-width: 768px) {
+//     .wrapper {
+//         width: 704px;
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//         margin: 0 auto;
+//     }
+// }
 
-@media screen and (min-width: 1280px) {
-    .wrapper {
-        width: 821px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin: 0 auto;
-    }
-}
+// @media screen and (min-width: 1280px) {
+//     .wrapper {
+//         width: 821px;
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//         margin: 0 auto;
+//     }
+// }
 
 // .qwe {
 //     border: none;
@@ -37,6 +37,15 @@
     padding: 5px 15px;
     border: none;
     background-color: var(--bcg-btn-light);
+
+    transition: 700ms ease-in-out;
+}
+
+.btn:hover,
+.btn:focus {
+    transform: scale(1.05);
+    transition: 700ms ease-in-out;
+
 }
 
 .btn_active {
@@ -46,6 +55,14 @@
     border: none;
     fill: var(--bcg-btn-light);
     background-color: var(--bcg-btn-active);
+
+    transition: 700ms ease-in-out;
+}
+
+.btn_active:hover,
+.btn_active:focus {
+    transform: scale(1.05);
+    transition: 700ms ease-in-out;
 }
 
 @media screen and (min-width: 768px) {
@@ -77,6 +94,13 @@
 .text {
     font-size: 12px;
     line-height: 14px;
+    transition: 700ms ease-in-out;
+}
+
+.text:hover,
+.text:focus {
+    transform: scale(1.05);
+    transition: 700ms ease-in-out;
 }
 
 .icon_reverse {
@@ -106,4 +130,9 @@
         width: 24px;
         height: 24px;
     }
+}
+
+.img {
+    width: 40px;
+    height: 34px;
 }
