--- a/src/index.scss
+++ b/src/index.scss
@@ -1,27 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700;800&display=swap");
 
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-  #root {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  main {
-    /* Чтобы занимал оставшееся пространство */
-    flex-grow: 1;
-  }
-  
-  footer {
-    /* Чтобы footer не уменьшался */
-    flex-shrink: 0;
-  }
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  /* Чтобы занимал оставшееся пространство */
+  flex-grow: 1;
+}
+
+footer {
+  /* Чтобы footer не уменьшался */
+  flex-shrink: 0;
+}
 :root {
   --bcg-primary: #f5f6fb;
   --bcg-second: #ffffff;
@@ -31,13 +30,13 @@
   --bcg-btn-light: #ffffff;
   --bcg-google-btn: #fafafa;
   --bcg-test-dark: #02172a;
-  --bcg-test-light: #ff6b01;
+  --bcg-test-light: rgb(255, 107, 1);
   --text-primary: #000000;
   --text-secondary: #555555;
   --text-light: #ffffff;
   --text-footer: rgba(255, 255, 255, 0.4);
   --text-input-placeholder: #bbbbbb;
-  --color-active-menu: #ff6b09;
+  --color-active-menu: rgb(255, 107, 9);
   --color-border: #e2e3e5;
   --color-border-bottom: 1px solid #e5e5e5; /*after title on page*/
   --color-shodow: rgba(2, 23, 42, 0.1);
@@ -45,10 +44,8 @@
   --diagram-positive: #ff6b01;
   --diagram-negative: #d7d7d7;
   --main-font-famali: "Montserrat", sans-serif;
-  --color-border-vector:1px solid #00122F;
+  --color-border-vector: 1px solid #00122f;
 }
-
-
 
 body {
   color: var(--text-primary);
