--- a/src/modules/Auth/RegisterForm/registerForm.module.scss
+++ b/src/modules/Auth/RegisterForm/registerForm.module.scss
@@ -24,4 +24,9 @@
   line-height: 1.2;
   letter-spacing: 0.02em;
   padding-bottom: 20px;
+
+  @media (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
