fix_style_page_not_found

--- a/src/index.scss
+++ b/src/index.scss
@@ -26,17 +26,17 @@ footer {
   --bcg-second: #ffffff;
   --bcg-footer: #02172a;
   --bcg-btn-dark: #02172a;
-  --bcg-btn-active: #ff6b09;
+  --bcg-btn-active: #ff6c0a;
   --bcg-btn-light: #ffffff;
   --bcg-google-btn: #fafafa;
   --bcg-test-dark: #02172a;
-  --bcg-test-light: rgb(255, 107, 1);
+  --bcg-test-light: #ff6b01;
   --text-primary: #000000;
   --text-secondary: #555555;
   --text-light: #ffffff;
   --text-footer: rgba(255, 255, 255, 0.4);
   --text-input-placeholder: #bbbbbb;
-  --color-active-menu: rgb(255, 107, 9);
+  --color-active-menu: hsl(24, 100%, 52%);
   --color-border: #e2e3e5;
   --color-border-bottom: 1px solid #e5e5e5; /*after title on page*/
   --color-shodow: rgba(2, 23, 42, 0.1);
