--- a/src/pages/NotFoundPage/notFoundPage.module.scss
+++ b/src/pages/NotFoundPage/notFoundPage.module.scss
@@ -14,29 +14,28 @@
   font-size: 30px;
   letter-spacing: 0.02em;
   text-align: center;
-  user-select:none;
+  user-select: none;
   @media (min-width: 768px) {
     font-size: 60px;
   }
 }
 
-.item{
+.item {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.link{
-    display: flex;
-    outline: none;
-    text-decoration: none;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
+.link {
+  display: flex;
+  outline: none;
+  text-decoration: none;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
-
-.cat{
+.cat {
   width: 160px;
   @media (min-width: 768px) {
     width: 450px;
@@ -56,83 +55,150 @@
   font-weight: bold;
   letter-spacing: 2px;
   color: rgb(16, 18, 1);
-  transition: .15s ease-in-out;
+  transition: 0.15s ease-in-out;
   font-size: 15px;
   animation: shake 0.5s;
   animation-iteration-count: infinite;
 }
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  // 30% {
+  //   transform: translate(3px, 2px) rotate(0deg);
+  // }
+  // 40% {
+  //   transform: translate(1px, -1px) rotate(1deg);
+  // }
+  // 50% {
+  //   transform: translate(-1px, 2px) rotate(-1deg);
+  // }
+  // 60% {
+  //   transform: translate(-3px, 1px) rotate(0deg);
+  // }
+  // 70% {
+  //   transform: translate(3px, 1px) rotate(-1deg);
+  // }
+  // 80% {
+  //   transform: translate(-1px, -1px) rotate(1deg);
+  // }
+  // 90% {
+  //   transform: translate(1px, 2px) rotate(0deg);
+  // }
+  // 100% {
+  //   transform: translate(1px, -2px) rotate(-1deg);
+  // }
 }
 
 .btmHome:hover {
   box-shadow: 0 0 10px 0 #dadcaa inset, 0 0 10px 4px #dadcaa;
 }
 
-
-.title_text { 
-  justify-content: center; 
-  align-items: center; 
-  text-align:center; 
+.title_text {
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   margin-bottom: 40px;
   @media (min-width: 768px) {
     margin-bottom: 20px;
   }
 }
 
+.text {
+  display: inline-block;
+  animation: float 0.2s ease-in-out infinite;
+}
+// @keyframes float {
+//   0%,
+//   100% {
+//     transform: none;
+//   }
+//   33% {
+//     transform: translateY(-1px) rotate(-2deg);
+//   }
+//   66% {
+//     transform: translateY(1px) rotate(2deg);
+//   }
+// }
+// .title_text:hover span {
+//   animation: bounce 0.6s;
+// }
+// @keyframes bounce {
+//   0%,
+//   100% {
+//     transform: translate(0);
+//   }
+//   25% {
+//     transform: rotateX(20deg) translateY(2px) rotate(-3deg);
+//   }
+//   50% {
+//     transform: translateY(-20px) rotate(3deg) scale(1.1);
+//   }
+// }
 
-
-// h2 span 
-.text{ display:inline-block; animation:float .2s ease-in-out infinite; }
-@keyframes float {
-  0%,100%{ transform:none; }
-  33%{ transform:translateY(-1px) rotate(-2deg); }
-  66%{ transform:translateY(1px) rotate(2deg); }
+.text:nth-child(4n) {
+  color: hsl(24, 75%, 55%);
+  text-shadow: 1px 1px hsl(24, 75%, 45%), 2px 2px hsl(24, 45%, 45%),
+    3px 3px hsl(24, 45%, 45%), 4px 4px hsl(24, 75%, 45%);
 }
-.title_text:hover span { animation:bounce .6s; }
-@keyframes bounce {
-  0%,100%{ transform:translate(0); }
-  25%{ transform:rotateX(20deg) translateY(2px) rotate(-3deg); }
-  50%{ transform:translateY(-20px) rotate(3deg) scale(1.1);  }
+.text:nth-child(4n-1) {
+  color: hsl(24, 72%, 46%);
+  text-shadow: 1px 1px hsl(24, 49%, 45%), 2px 2px hsl(24, 35%, 45%),
+    3px 3px hsl(24, 35%, 45%), 4px 4px hsl(24, 35%, 45%);
 }
-
-.text:nth-child(4n) { 
-  color:hsl(50, 75%, 55%); 
-  text-shadow:1px 1px hsl(50, 75%, 45%), 2px 2px hsl(50, 45%, 45%), 3px 3px hsl(50, 45%, 45%), 4px 4px hsl(50, 75%, 45%); 
+.text:nth-child(4n-2) {
+  color: hsl(24, 35%, 60%);
+  text-shadow: 1px 1px hsl(24, 58%, 56%), 2px 2px hsl(24, 25%, 50%),
+    3px 3px hsl(24, 25%, 50%), 4px 4px hsl(24, 25%, 50%);
 }
-.text:nth-child(4n-1) { 
-  color:hsl(135, 35%, 55%); 
-  text-shadow:1px 1px hsl(135, 35%, 45%), 2px 2px hsl(135, 35%, 45%), 3px 3px hsl(135, 35%, 45%), 4px 4px hsl(135, 35%, 45%); 
-}
-.text:nth-child(4n-2) { 
-  color:hsl(155, 35%, 60%); 
-  text-shadow:1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%), 3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%); 
-}
-.text:nth-child(4n-3) { 
-  color:hsl(30, 65%, 60%); 
-  text-shadow:1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%), 3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%); 
+.text:nth-child(4n-3) {
+  color: hsl(30, 65%, 60%);
+  text-shadow: 1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%),
+    3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%);
 }
 
-.text:nth-child(2){ animation-delay:.05s; }
-.text:nth-child(3){ animation-delay:.1s; }
-.text:nth-child(4){ animation-delay:.15s; }
-.text:nth-child(5){ animation-delay:.2s; }
-.text:nth-child(6){ animation-delay:.25s; }
-.text:nth-child(7){ animation-delay:.3s; }
-.text:nth-child(8){ animation-delay:.35s; }
-.text:nth-child(9){ animation-delay:.4s; }
-.text:nth-child(10){ animation-delay:.45s; }
-.text:nth-child(11){ animation-delay:.5s; }
-.text:nth-child(12){ animation-delay:.55s; }
-.text:nth-child(13){ animation-delay:.6s; }
-.text:nth-child(14){ animation-delay:.65s; }
+// .text:nth-child(2) {
+//   animation-delay: 0.05s;
+// }
+// .text:nth-child(3) {
+//   animation-delay: 0.1s;
+// }
+// .text:nth-child(4) {
+//   animation-delay: 0.15s;
+// }
+// .text:nth-child(5) {
+//   animation-delay: 0.2s;
+// }
+// .text:nth-child(6) {
+//   animation-delay: 0.25s;
+// }
+// .text:nth-child(7) {
+//   animation-delay: 0.3s;
+// }
+// .text:nth-child(8) {
+//   animation-delay: 0.35s;
+// }
+// .text:nth-child(9) {
+//   animation-delay: 0.4s;
+// }
+// .text:nth-child(10) {
+//   animation-delay: 0.45s;
+// }
+// .text:nth-child(11) {
+//   animation-delay: 0.5s;
+// }
+// .text:nth-child(12) {
+//   animation-delay: 0.55s;
+// }
+// .text:nth-child(13) {
+//   animation-delay: 0.6s;
+// }
+// .text:nth-child(14) {
+//   animation-delay: 0.65s;
+// }
