--- a/src/modules/Header/MobileMenu/mobile-menu.module.scss
+++ b/src/modules/Header/MobileMenu/mobile-menu.module.scss
@@ -12,22 +12,20 @@
     z-index: 1;
     // opacity: 1;
     // transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-    // transition: 700ms ease-in;
-
-
-    
+    transition: 700ms ease-in; 
 }
 
-// .open {
-//     composes: overlay;
-//     // opacity: 0;
-//     // transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-//     transition: 700ms ease-in;
+.open {
+    composes: overlay;
+    // opacity: 0;
+    // transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 // top: 100%;
-//     // right: 100%;
-//     // left: 100%;
+    // right: 100%;
+    left: 100%;
+    transition: 700ms ease-in;
 
-// }
+}
 
 @media screen and (min-width: 768px) {
     .overlay {
@@ -41,7 +39,9 @@
     width: 100%;
     height: 100vh;
     background-color: #F5F6FB;
-    // background-color: transparent;
+    // background-color: red;
+    // opacity: 1;
+    // transition: 700ms ease-in;
     z-index: 1;
 
 }
@@ -76,6 +76,13 @@
     flex-direction: column;
 
     border-bottom: 1px solid var(--color-border);
+    transition: 700ms ease-in-out;
+}
+
+.item:hover,
+.item:focus {
+    transform: scale(1.05);
+    transition: 700ms ease-in-out;
 }
 
 .link {
