--- a/src/modules/Header/UserInfo/user-info.module.scss
+++ b/src/modules/Header/UserInfo/user-info.module.scss
@@ -18,6 +18,7 @@
     width: 30px;
     height: 30px;
     margin-right: 8px;
+    cursor: pointer;
     border-radius: 50%;
     background-color: var(--bcg-second);
     box-shadow: 0px 1px 1px rgba(18, 29, 46, 0.1);
