--- a/src/shared/components/TestingButtons/testing-buttons.module.scss
+++ b/src/shared/components/TestingButtons/testing-buttons.module.scss
@@ -1,36 +1,3 @@
-// .wrapper {
-//     width: 280px;
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     margin: 0 auto;
-// }
-
-// @media screen and (min-width: 768px) {
-//     .wrapper {
-//         width: 704px;
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//         margin: 0 auto;
-//     }
-// }
-
-// @media screen and (min-width: 1280px) {
-//     .wrapper {
-//         width: 821px;
-//         display: flex;
-//         align-items: center;
-//         justify-content: space-between;
-//         margin: 0 auto;
-//     }
-// }
-
-// .qwe {
-//     border: none;
-//     background-color: transparent;
-// }
-
 .btn {
     width: 55px;
     height: 34px;
@@ -41,11 +8,18 @@
     transition: 700ms ease-in-out;
 }
 
+@media screen and (max-width: 767px) {
+    .btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
 .btn:hover,
 .btn:focus {
     transform: scale(1.05);
     transition: 700ms ease-in-out;
-
 }
 
 .btn_active {
@@ -135,4 +109,11 @@
 .img {
     width: 40px;
     height: 34px;
+}
+
+@media screen and (max-width: 767px) {
+    .img {
+    width: 40px;
+    height: 30px;
+    }
 }
