--- a/src/modules/Header/MobileMenu/mobile-menu.module.scss
+++ b/src/modules/Header/MobileMenu/mobile-menu.module.scss
@@ -10,21 +10,15 @@
     -webkit-box-align: center;
     -webkit-box-pack: center;
     z-index: 1;
-    // opacity: 1;
-    // transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+
     transition: 700ms ease-in; 
 }
 
 .open {
     composes: overlay;
-    // opacity: 0;
-    // transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-// top: 100%;
-    // right: 100%;
+
     left: 100%;
     transition: 700ms ease-in;
-
 }
 
 @media screen and (min-width: 768px) {
@@ -39,11 +33,8 @@
     width: 100%;
     height: 100vh;
     background-color: #F5F6FB;
-    // background-color: red;
-    // opacity: 1;
-    // transition: 700ms ease-in;
-    z-index: 1;
 
+    z-index: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -57,8 +48,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-        opacity: 1;
-            transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
@@ -68,7 +57,6 @@
 }
 
 .item {
-    
     display: flex;
     width: 100%;
     align-items: center;
@@ -91,7 +79,6 @@
     color: var(--color-text);
     transition: 1000ms;
     padding: 26px 50px;
-    // padding: 50px 30px;
 }
 
 .isActive {
@@ -119,5 +106,15 @@
     width: 16px;
     height: 16px;
     margin-top: 28px;
+
+    cursor: pointer;
+    transition: 500ms ease-in-out;
     z-index: 999;
+}
+
+.icon_logout:hover,
+.icon_logout:focus {
+    transform: scale(1.05);
+    transition: 500ms ease-in-out;
+    fill: red;
 }
