--- a/src/modules/Auth/LoginForm/loginForm.module.scss
+++ b/src/modules/Auth/LoginForm/loginForm.module.scss
@@ -1,7 +1,11 @@
 .google_wrap {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
 
   @media (min-width: 768px) {
+    display: block;
     text-align: start;
   }
 }
@@ -11,9 +15,9 @@
   font-weight: 500;
   font-size: 10px;
   line-height: 1.2;
-  padding-bottom: 32px;
 
   @media (min-width: 768px) {
+    padding-bottom: 32px;
     font-size: 14px;
     line-height: 1.14;
   }
@@ -21,6 +25,18 @@
 
 .google_btn {
   background-color: var(--bcg-google-btn);
+  padding: 17px 37px;
+  border: none;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
+
+  @media (min-width: 768px) {
+    margin-right: 32px;
+  }
+}
+
+.facebook_btn {
+  background-color: #2f55a4;
+  color: white;
   padding: 17px 37px;
   border: none;
   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.1));
@@ -36,7 +52,22 @@
 .last_input {
   margin-bottom: 20px;
   @media (min-width: 768px) {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+  }
+}
+
+.pass_link {
+  cursor: pointer;
+  display: block;
+  padding-bottom: 20px;
+  width: 200px;
+  font-size: 14px;
+  line-height: 1.14;
+
+  &:hover,
+  &:focus {
+    text-decoration: underline;
+    color: rgb(0, 132, 176);
   }
 }
 
