start_user_result_test

--- a/src/pages/VerifyPage/verifyPage.module.scss
+++ b/src/pages/VerifyPage/verifyPage.module.scss
@@ -13,22 +13,23 @@
 }
 
 .text {
-  width: 200px;
+  width: 250px;
   margin: 0 auto;
-  padding-bottom: 50px;
+  padding-bottom: 34px;
 
   font-size: 12px;
   line-height: 1.67;
 
   @media (min-width: 768px) {
-    width: 650px;
+    width: 700px;
 
-    font-size: 22px;
+    font-size: 17px;
     line-height: 1.36;
   }
 
   @media (min-width: 1280px) {
-    width: 800px;
+    width: 725px;
+    font-size: 18px;
   }
 }
 
@@ -37,29 +38,25 @@
   justify-content: space-around;
 
   @media (min-width: 768px) {
-    justify-content: space-between;
-  }
-}
-
-.res_btn_dis {
-  background-color: var(--diagram-negative);
-  padding: 10px 20px;
-  font-size: 9px;
-  line-height: 1.25;
-
-  @media (min-width: 768px) {
-    font-size: 12px;
+    justify-content: center;
+    padding-bottom: 50px;
   }
 }
 
 .res_btn_activ {
-  background-color: var(--bcg-second);
-  padding: 10px 20px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  color: rgb(0, 132, 176);
+  width: auto;
+  padding: 0;
+  height: auto;
+  padding-left: 10px;
   font-size: 9px;
   line-height: 1.25;
 
   @media (min-width: 768px) {
-    font-size: 12px;
+    font-size: 15px;
   }
 }
 
