--- a/src/index.scss
+++ b/src/index.scss
@@ -10,16 +10,14 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  overflow-x: hidden
+  overflow-x: hidden;
 }
 
 main {
-  /* Чтобы занимал оставшееся пространство */
   flex-grow: 1;
 }
 
 footer {
-  /* Чтобы footer не уменьшался */
   flex-shrink: 0;
 }
 :root {
