--- a/src/pages/RePasswordPage/rePasswordPage.module.scss
+++ b/src/pages/RePasswordPage/rePasswordPage.module.scss
@@ -1,30 +1,34 @@
-.wrap {
-}
-
 .wrap_content {
   display: flex;
   flex-direction: column;
   gap: 50px;
+  margin: 0 auto;
+  margin-top: 100px;
+  background: var(--bcg-second);
 
-  padding-top: 60px;
+  box-shadow: 0px 10px 20px 5px rgba(0, 0, 0, 0.5);
+
+  padding: 40px 20px;
 
   @media (min-width: 768px) {
-    flex-direction: row;
+    align-items: center;
+    width: 600px;
+    padding: 60px 30px;
+    margin-top: 120px;
   }
 
   @media (min-width: 1280px) {
-    justify-content: center;
+    margin-top: 140px;
   }
 }
 
 .text {
-  color: var(--color-active-menu);
-  font-size: 22px;
+  font-size: 19px;
   line-height: 1.67;
 
   @media (min-width: 768px) {
-    font-size: 26px;
-    line-height: 1.85;
+    font-size: 24px;
+    line-height: 1.25;
   }
 }
 
@@ -45,6 +49,7 @@
   margin: 0 auto;
 
   @media (min-width: 768px) {
+    width: 200px;
     font-size: 12px;
   }
 }
