--- a/src/index.scss
+++ b/src/index.scss
@@ -22,7 +22,10 @@ footer {
   /* Чтобы footer не уменьшался */
   flex-shrink: 0;
 }
-:root {
+
+/* Light theme */
+
+html[data-theme='light'] {
   --bcg-primary: #f5f6fb;
   --bcg-second: #ffffff;
   --bcg-footer: #02172a;
@@ -46,6 +49,44 @@ footer {
   --diagram-negative: #d7d7d7;
   --main-font-famali: "Montserrat", sans-serif;
   --color-border-vector: 1px solid #00122f;
+  --text-materials: #000000;
+  --bgc-questions: #ffffff;
+  --bgc-form: #ffffff;
+  --color-border-result: 1px solid #00122f;
+  --border-result: none;
+}
+
+/* Dark theme */
+
+html[data-theme='dark']{
+  --bcg-primary: #02172A;
+  --bcg-second: #d7d7d7;
+  --bcg-footer: #02172a;
+  --bcg-btn-dark: MediumBlue;
+  --bcg-btn-active: #ff6c0a;
+  --bcg-btn-light: #ffffff;
+  --bcg-google-btn: #fafafa;
+  --bcg-test-dark: #fafafa;
+  --bcg-test-light: #ff6b01;
+  --text-primary: #fafafa;
+  --text-secondary: #555555;
+  --text-light: #ffffff;
+  --text-footer: rgb(50, 50, 50);
+  --text-input-placeholder: #bbbbbb;
+  --color-active-menu: hsl(24, 100%, 52%);
+  --color-border: #e2e3e5;
+  --color-border-bottom: 1px solid #e5e5e5; /*after title on page*/
+  --color-shodow: rgba(255, 255, 255, 0.35) 0px 2px 20px;
+  --color-input: #ced2d1;
+  --diagram-positive: #ff6b01;
+  --diagram-negative: #d7d7d7;
+  --main-font-famali: "Montserrat", sans-serif;
+  --color-border-vector: 1px solid #00122f;
+  --text-materials: #000000;
+  --bgc-questions: RoyalBlue;
+  --bgc-form: SteelBlue;
+  --color-border-result: 1px solid #d7d7d7;
+  --border-result: #ced2d1;
 }
 
 body {
@@ -60,6 +101,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: var(--main-font-famali);
+  transition: background-color 500ms ease-in-out;
+}
+
+@media screen and (max-width: 1279px) {
+  body {
+    padding-top: 70px;
+  }
 }
 
 button {
