--- a/src/modules/Header/HeaderMenu/header-menu.module.scss
+++ b/src/modules/Header/HeaderMenu/header-menu.module.scss
@@ -54,7 +54,7 @@
 .link {
     font-size: 14px;
     line-height: 0.8;
-    color: var(--color-text);
+    color: var(--text-primary);
 }
 
 .isActive {
