--- a/src/shared/components/Button/button.module.scss
+++ b/src/shared/components/Button/button.module.scss
@@ -1,6 +1,6 @@
 .btn {
     background-color: var(--bcg-btn-light);
-    color: var(--text-primary);
+    color: var(--text-materials);
     padding: 23px 25px;
     border: 1px solid var(--color-input);
     text-transform: uppercase;
