--- a/src/modules/Auth/auth.module.scss
+++ b/src/modules/Auth/auth.module.scss
@@ -68,8 +68,10 @@
 
 .form_wrapper {
   width: 280px;
-  background-color: var(--bcg-second);
+  // background-color: SteelBlue;
+  background-color: var(--bgc-form);
   box-shadow: var(--color-shodow);
+  // box-shadow: rgba(255, 255, 255, 0.35) 0px 2px 20px;
   padding: 40px 20px;
 }
 
