--- a/src/modules/Header/UserMenu/user-menu.module.scss
+++ b/src/modules/Header/UserMenu/user-menu.module.scss
@@ -5,12 +5,14 @@
 .icon_menu {
     width: 20px;
     height: 20px;
+    fill: var(--text-primary);
     z-index: 999;
 }
 
 .icon_close {
     width: 20px;
     height: 20px;
+    fill: var(--text-primary);
     z-index: 999;
 }
 
