--- a/src/modules/Header/header.module.scss
+++ b/src/modules/Header/header.module.scss
@@ -1,11 +1,14 @@
 .header {
-    position: sticky;
+    // position: -webkit-sticky;
+    // position: sticky;
+    position: fixed;
     width: 100vw;
     top: 0;
     text-align: end;
 
-    background-color: #F5F6FB;
+    background-color: var(--bcg-primary);
     border-bottom: 1px solid var(--color-border);
+    transition: background-color 500ms ease-in-out;
     z-index: 1000;
 }
 
@@ -16,12 +19,15 @@
 }
 
 .isActive {
-    position: sticky;
+    // position: -webkit-sticky;
+    // position: sticky;
+    position: fixed;
     width: 100vw;
     top: 0;
 
-    background-color: #F5F6FB;
+    background-color: var(--bcg-primary);
     border-bottom: 1px solid var(--color-border);
+    transition: background-color 500ms ease-in-out;
     z-index: 1000;
 }
 
@@ -51,7 +57,7 @@
 .icon_logout {
     width: 16px;
     height: 16px;
-
+    fill: var(--text-primary);
     cursor: pointer;
     transition: 500ms ease-in-out;
 }
@@ -73,4 +79,44 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.dark {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px;
+    padding: 7px;
+    // width: 30px;
+    // height: 30px;
+    color: white;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: 700ms ease-in;
+}
+
+.dark:hover,
+.dark:focus {
+    background-color: gray;
+    transition: 700ms ease-in;
+}
+
+.light {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 7px;
+    margin-right: 10px;
+    // width: 30px;
+    // height: 30px;
+    cursor: pointer;
+    border-radius: 50%;
+    transition: 700ms ease-in;
+}
+
+.light:hover,
+.light:focus {
+    // background-color: rgb(255, 132, 0);
+    background-color: yellow;
+    transition: 700ms ease-in;
 }
