--- a/src/modules/Materials/materials.module.scss
+++ b/src/modules/Materials/materials.module.scss
@@ -76,6 +76,7 @@
 
 
 .literature{
+  color: var(--text-materials);
   padding-top: 45px;
   margin-bottom: 32px;
   width: 207px;
@@ -91,6 +92,7 @@
 }
 
 .resources{
+  color: var(--text-materials);
   width: 207px;
   @media (min-width: 768px) {
     width: 336px;
@@ -104,6 +106,7 @@
   }
 }
 .title{
+color: var(--text-materials);
 font-weight: 700;
 font-size: 18px;
 line-height: 22px;
@@ -116,7 +119,24 @@ width: 129px;
     margin-bottom: 20px;
     width: 100%;
   }
-  }
+}
+
+// .title_dark {
+//     color: red;
+//     font-weight: 700;
+//     font-size: 18px;
+//     line-height: 22px;
+//     letter-spacing: 0.02em;
+//     margin-bottom: 12px;
+//     width: 129px;
+  
+//     @media (min-width: 768px) {
+//       font-size: 22px;
+//       line-height: 30px;
+//       margin-bottom: 20px;
+//       width: 100%;
+//     }
+// }
 .vector{
 width: 150px;
 opacity: 0.15;
@@ -132,7 +152,7 @@ margin-bottom: 8px;
 }
 
 .list{
-color: var(--text-primary);
+color: var(--text-materials);
 font-weight: 500;
 font-size: 10px;
 line-height: 16px;
@@ -149,7 +169,7 @@ list-style-position: inside;
 }
 
 .link{
-  border-bottom: 1px solid var(--text-primary);
+  border-bottom: 1px solid var(--text-materials);
 }
 
 // #f5f6fb
