--- a/src/modules/TestModule/Questions/questions.module.scss
+++ b/src/modules/TestModule/Questions/questions.module.scss
@@ -3,7 +3,8 @@
   padding: 40px 20px;
   width: 280px;
   min-height: 500px;
-  background-color: var(--bcg-second);
+  background-color: var(--bgc-questions);
+  box-shadow: rgba(255, 255, 255, 0.35) 0px 2px 20px;
 
   @media (min-width: 768px) {
     padding: 40px 73px;
@@ -46,7 +47,7 @@
   font-weight: 500;
   font-size: 10px;
   line-height: 1.21;
-  border: none;
+  border: 1px solid var(--border-result);
 
   @media (min-width: 768px) {
     width: 181px;
