--- a/src/shared/components/Logo/logo.module.scss
+++ b/src/shared/components/Logo/logo.module.scss
@@ -1,14 +1,12 @@
 .logo_container {
     display: block;
     margin-right: auto;
+    box-shadow: grey 0px 30px 40px -2em inset;
 }
 
 .icon {
     display: inline-block;
     width: 129px;
     height: 28px;
-    // stroke-width: 0;
-    // stroke: var(--bcg-btn-active);
-    // fill: var(--bcg-btn-active);
-    // mask-image: var(--bcg-btn-active);
+    box-shadow: var(--bcg-second) 0px 50px 10px 3em inset;
 }
