--- a/src/modules/Header/UserInfo/user-info.module.scss
+++ b/src/modules/Header/UserInfo/user-info.module.scss
@@ -19,7 +19,8 @@
     margin-right: 8px;
     cursor: pointer;
     border-radius: 50%;
-    background-color: var(--bcg-second);
+    color: #000000;
+    background-color: #ffffff;
     box-shadow: 0px 1px 1px rgba(18, 29, 46, 0.1);
 }
 
