--- a/src/shared/components/ButtonBig/buttonBig.module.scss
+++ b/src/shared/components/ButtonBig/buttonBig.module.scss
@@ -8,8 +8,8 @@
   letter-spacing: 0.02em;
   // color: var(--text-light);
   // background-color: var(--bcg-btn-dark);
-    background-color: white;
-      color: black;
+  background-color: var(--bcg-big-button);;
+      color: var(--color-big-button);
   padding-top: 60px;
   padding-bottom: 42px;
   border: none;
