--- a/src/modules/Header/header.module.scss
+++ b/src/modules/Header/header.module.scss
@@ -1,7 +1,7 @@
 .header {
     // position: -webkit-sticky;
-    // position: sticky;
-    position: fixed;
+    position: sticky;
+
     width: 100vw;
     top: 0;
     text-align: end;
@@ -10,6 +10,12 @@
     border-bottom: 1px solid var(--color-border);
     transition: background-color 500ms ease-in-out;
     z-index: 1000;
+}
+
+@media screen and (max-width: 767px) {
+    .header {
+        position: fixed;
+    }
 }
 
 @media screen and (min-width: 1280px) {
@@ -40,6 +46,12 @@
 @media screen and (min-width: 768px) {
     .isActive {
         padding: 20px 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .isActive {
+        position: fixed;
     }
 }
 
@@ -97,7 +109,9 @@
 
 .dark:hover,
 .dark:focus {
-    background-color: gray;
+    // background-color: gray;
+    // background-color: rgb(237, 231, 225);
+    background-color: rgb(108, 122, 137);
     transition: 700ms ease-in;
 }
 
@@ -117,6 +131,6 @@
 .light:hover,
 .light:focus {
     // background-color: rgb(255, 132, 0);
-    background-color: yellow;
+    background-color: rgb(237, 231, 225);
     transition: 700ms ease-in;
 }
