--- a/src/index.scss
+++ b/src/index.scss
@@ -35,7 +35,7 @@ footer {
   --text-light: #ffffff;
   --text-footer: rgba(255, 255, 255, 0.4);
   --text-input-placeholder: #bbbbbb;
-  --color-active-menu: hsl(24, 100%, 52%);
+  --color-active-menu: rgb(255, 108, 10);
   --color-border: #e2e3e5;
   --color-border-bottom: 1px solid #e5e5e5; /*after title on page*/
   --color-shodow: rgba(2, 23, 42, 0.1);
